# dextr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  USAGE.md  dextr.py  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  run_tests.sh  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  security.yml  test.yml
completion/: README.md  dextr.bash  dextr.fish  dextr.zsh
dextr/: __init__.py  __main__.py  archive_utils.py  cli.py  config.py  core.py  exceptions.py  key_protection.py  key_rotation.py  logging_config.py  streaming.py  validation.py  version.py
dextr/experimental/: __init__.py  streaming.py
docs/: README.md
docs/source/: api.rst  conf.py  examples.rst  index.rst  security.rst
examples/: README.md  automated_backup.py  basic_encryption.py  batch_encryption.py  progress_tracking.py  secure_transfer.py
scripts/: check_version.py
tests/: __init__.py  conftest.py  test_core.py  test_key_protection.py
